# juju

./: .gitignore  Dockerfile  GEMINI.md  Makefile  Project.md  README.md  oof.csv  opt_dir.txt  pyproject.toml  submission.csv  submission.py  thresholds.json
.agent/rules/: architecture.md  conventions.md  dod.md  stack.md  workflow.md
.github/workflows/: ci.yml
configs/: config.yaml
configs/experiment/: debug.yaml  production.yaml  test.yaml
configs/model/: efficientnet.yaml
configs/train/: default.yaml
docs/: dataset.md  plan.md  project.md
docs/rules/: dod.md  general.md
prompt/: rules.md
scripts/: create_folds.py  create_tfrecords.py  ensemble_predictions.py  inspect_data.py  optimize_thresholds.py  train_all_folds.py
src/: benchmark_augs.py  benchmark_loader.py  debug_data.py  inference.py  train.py
src/data/: augmentations.py  loader.py  preprocess.py
src/models/: factory.py  layers.py  losses.py
src/training/: callbacks.py  swa.py  trainer.py
src/utils/: metrics.py  seeding.py
submissions/: submission.py
tests/: test_model.py
